--- a/modules/ROOT/pages/proc_assembling-a-pipeline.adoc
+++ b/modules/ROOT/pages/proc_assembling-a-pipeline.adoc
@@ -114,9 +114,9 @@ spec:
 +
 This `Pipeline` performs the following tasks:
 
-* Clones the source code of the frontend application from the `api-repo`git  repository and the backend application from the `ui-reporesource` git repository.
-* Builds the container image of frontend using the `s2i-python-3` task that generates a Dockerfile for the application using Source-to-Image (S2I). 
-* Builds the container image of backend using the `buildah` task that uses `Buildah` to build the image.
+* Clones the source code of the frontend application from the `api-repo` Git repository and the backend application from the `ui-reporesource` Git repository.
+* Builds the container image for the frontend using the `s2i-python-3` task that generates a Dockerfile for the application using Source-to-Image (S2I). 
+* Builds the container image for the backend using the `buildah` task that uses `Buildah` to build the image.
 * The application image is pushed to an image registry.
 * The new application image is deployed on OpenShift using the `apply-manifests` and `update-deployment` tasks.
 +
