--- a/modules/ROOT/pages/proc_deploying-an-application-to-openshift.adoc
+++ b/modules/ROOT/pages/proc_deploying-an-application-to-openshift.adoc
@@ -54,8 +54,8 @@ $ oc new-project pipelines-tutorial
 $ oc get serviceaccount pipeline
 ----
 
-. In the OpenShift Web Console switch the *Developer* perspective of the OpenShift Web Console.
+. In the OpenShift Web Console switch to the *Developer* perspective of the OpenShift Web Console.
 
-. Select the `pipelines-tutorial` project from the *Project* dropdown menu. On the *Topology* view of the *Developer* perspective, you will be able to see the resources of your Pipeline. The deployment at this stage is not complete. The `Pipeline` you create in the next steps builds the simple application which has a frontend and a backend and completes the deployment.
+. Select the `pipelines-tutorial` project from the *Project* drop-down menu. On the *Topology* view of the *Developer* perspective, you will be able to see the resources of your Pipeline. The deployment at this stage is not complete. The `Pipeline` you create in the next steps builds the simple application which has a frontend and a backend and completes the deployment.
 +
-image::application-deployed.png[Application Deployed]
+image::../assets/images/application-deployed.png[Application Deployed]
