--- a/modules/ROOT/pages/proc_installing-pipelines-operator-using-the-cli.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator-using-the-cli.adoc
@@ -9,9 +9,9 @@ You can install OpenShift Pipelines operator from the OperatorHub using the CLI.
 
 .Prerequisites
 
-- Access to an OpenShift cluster using an admin account.
+* Access to an OpenShift Container Platform 4 cluster using an admin account.
 
-- *oc* is installed on your system.
+* *oc* is installed on your system.
 
 .Procedure
 
@@ -23,11 +23,11 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: openshift-pipelines-operator
-  namespace: openshift-operators 
+  namespace: openshift-operators
 spec:
   channel: dev-preview
   name: openshift-pipelines-operator
-  source: community-operators 
+  source: community-operators
   sourceNamespace: openshift-marketplace
 ----
 
