--- a/modules/ROOT/pages/proc_assembling-a-pipeline.adoc
+++ b/modules/ROOT/pages/proc_assembling-a-pipeline.adoc
@@ -114,13 +114,13 @@ spec:
 +
 This `Pipeline` performs the following tasks:
 
-* Clones the source code of the frontend application from the `api-repo` Git repository and the backend application from the `ui-reporesource` Git repository.
-* Builds the container image for the frontend using the `s2i-python-3` task that generates a Dockerfile for the application using Source-to-Image (S2I). 
-* Builds the container image for the backend using the `buildah` task that uses `Buildah` to build the image.
+* Clones the source code of the back-end application from the `api-repo` Git repository and the front-end application from the `ui-repo resource` Git repository.
+* Builds the container image for the front-end using the `s2i-python-3` task that generates a Dockerfile for the application using Source-to-Image (S2I).
+* Builds the container image for the back-end using the `buildah` task that uses `Buildah` to build the image.
 * The application image is pushed to an image registry.
 * The new application image is deployed on OpenShift using the `apply-manifests` and `update-deployment` tasks.
 +
-`Pipeline` s in Tekton are designed to be generic and re-usable across environments and stages through the applications lifecycle. They abstract away the specifics of the Git source repository and image registries to be used during `Pipeline` execution.
+`Pipelines` in Tekton are designed to be generic and re-usable across environments and stages through the applications lifecycle. They abstract away the specifics of the Git source repository and image registries to be used during `Pipeline` execution.
 +
 The execution order of the tasks is determined by the dependencies defined between the tasks using the  `inputs` and `outputs` parameters, and the explicit orders that are defined using `runAfter`.
 
@@ -137,11 +137,3 @@ $ tkn pipeline ls
 NAME               AGE            LAST RUN   STARTED   DURATION   STATUS
 build-and-deploy   1 minute ago   ---        ---       ---        ---
 ----
-
-[discrete]
-== Additional resources
-
-* A bulleted list of links to other material closely related to the contents of the procedure module.
-* For more details on writing procedure modules, see the link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-* Use a consistent system for file names, IDs, and titles. For tips, see _Anchor Names and File Names_ in link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-////
