--- a/modules/ROOT/pages/proc_defining-and-creating-pipeline-tasks.adoc
+++ b/modules/ROOT/pages/proc_defining-and-creating-pipeline-tasks.adoc
@@ -9,15 +9,10 @@
 
 Every `Task` runs as a pod and each `step` runs in its own container within the same pod. Since they run within the same pod they have access to the same volumes to cache files, configmaps, and secrets. They use `inputs` parameters, for example, a git , and `outputs` parameters, for example, an image in a registry, to interact with other tasks.
 
-`Tasks` are reusable and can be used in multiple `Pipeline` s. For this tutorial, you create a Maven `Task` with a single step to build a Maven based application, and then add two reusable `Tasks` from the link:https://github.com/tektoncd/catalog[catalog] repository.
+`Tasks` are reusable and can be used in multiple `Pipelines`.
 
-[discrete]
-=== Procedure
+Here is an example of a Maven `Task` with a single step to build a Maven-based Java application.
 
-. To create the Maven `Task`:
-
-.. Copy the contents of the following sample `Task` YAML file and save it:
-+
 ----
 apiVersion: tekton.dev/v1alpha1
 kind: Task
@@ -38,18 +33,14 @@ spec:
     - install
 
 ----
-+
 This `Task` starts a pod and runs a container inside that pod using the `maven:3.6.0-jdk-8-slim` image to run the specified commands. It receives an input directory called `workspace-git` which contains the source code of the application.
-+
-Only the requirement for a git repository is declared on the `Task` and not a specific git repository to be used. This allows `Tasks` to be reusable for multiple `Pipeline` s and purposes.
 
-.. Create the `Task` within your project:
-+
-----
-oc create -f maven-build-task.yaml
-----
+Only the requirement for a git repository is declared on the `Task` and not a specific git repository to be used. This allows `Tasks` to be reusable for multiple `Pipelines` and purposes.
 
-. Install the `apply-manifests` and `update-deployment` tasks from the repositories, which contain a list of reusable `Tasks` for `Pipeline`s:
+[discrete]
+== Procedure
+
+. Install the `apply-manifests` and `update-deployment` tasks from the repositories, which contain a list of reusable `Tasks` for `Pipelines`:
 +
 ----
 $ oc create -f https://raw.githubusercontent.com/openshift/pipelines-tutorial/master/pipeline/update_deployment_task.yaml
@@ -70,23 +61,29 @@ update-deployment   4 seconds ago
 +
 ----
 $ tkn clustertask ls
-NAME                      AGE
-buildah                   9 hours ago
-buildah-v0-8-0            9 hours ago
-openshift-client          9 hours ago
-openshift-client-v0-8-0   9 hours ago
-s2i                       9 hours ago
-s2i-go                    9 hours ago
-s2i-go-v0-8-0             9 hours ago
-s2i-java-11               9 hours ago
-s2i-java-11-v0-8-0        9 hours ago
-s2i-java-8                9 hours ago
-s2i-java-8-v0-8-0         9 hours ago
-s2i-nodejs                9 hours ago
-s2i-nodejs-v0-8-0         9 hours ago
-s2i-python-3              9 hours ago
-s2i-python-3-v0-8-0       9 hours ago
-s2i-v0-8-0                9 hours ago
+NAME                       AGE
+buildah                    4 minutes ago
+buildah-v0-10-0            4 minutes ago
+openshift-client           4 minutes ago
+openshift-client-v0-10-0   4 minutes ago
+s2i                        4 minutes ago
+s2i-go                     4 minutes ago
+s2i-go-v0-10-0             4 minutes ago
+s2i-java-11                4 minutes ago
+s2i-java-11-v0-10-0        4 minutes ago
+s2i-java-8                 4 minutes ago
+s2i-java-8-v0-10-0         4 minutes ago
+s2i-nodejs                 4 minutes ago
+s2i-nodejs-v0-10-0         4 minutes ago
+s2i-perl                   4 minutes ago
+s2i-perl-v0-10-0           4 minutes ago
+s2i-php                    4 minutes ago
+s2i-php-v0-10-0            4 minutes ago
+s2i-python-3               4 minutes ago
+s2i-python-3-v0-10-0       4 minutes ago
+s2i-ruby                   4 minutes ago
+s2i-ruby-v0-10-0           4 minutes ago
+s2i-v0-10-0                4 minutes ago
 ----
 
 
