Link Updates for the current release 0.10

--- a/modules/ROOT/pages/proc_installing-pipelines-operator-in-web-console.adoc
+++ b/modules/ROOT/pages/proc_installing-pipelines-operator-in-web-console.adoc
@@ -10,10 +10,10 @@ OpenShift Pipelines can be installed by using the operator listed in the OpenShi
 [discrete]
 === Prerequisites
 
-* Access a running link:https://try.openshift.com/[OpenShift Container Platform 4] cluster with administrative privileges. Developers can use link:https://access.redhat.com/documentation/en-us/red_hat_codeready_containers/1.0/html/getting_started_guide/index[CodeReady Containers(CRC)] to deploy a local OpenShift Container Platform cluster quickly.
+* Access a running link:https://try.openshift.com/[OpenShift Container Platform 4] cluster with administrative privileges. Developers can use link:https://access.redhat.com/documentation/en-us/red_hat_codeready_containers/[CodeReady Containers(CRC)] to deploy a local OpenShift Container Platform cluster quickly.
 
 
-* Install link:https://openshift.github.io/pipelines-docs/docs/0.8/proc_installing-cli.html[Tekton CLI] `tkn` on your local system and add it's location to your `PATH` environment variable.
+* Install link:https://openshift.github.io/pipelines-docs/docs/0.10.5/proc_installing-cli.html[Tekton CLI] `tkn` on your local system and add it's location to your `PATH` environment variable.
 
 [discrete]
 === Procedure
@@ -37,7 +37,7 @@ image::openshift_pipelines_install_subscription.png[]
 +
 [NOTE]
 ====
-OpenShift Pipelines 0.5.2 has introduced changes incompatible with older versions. If the installed version is 0.5.0 or below, the operator will not be automatically upgraded. To upgrade from the 0.5.0 or below, link:https://openshift.github.io/pipelines-docs/docs/docs/proc_uninstalling-pipelines-operator.html[uninstall the operator] and then install it again.
+OpenShift Pipelines 0.5.2 has introduced changes incompatible with older versions. If the installed version is 0.5.0 or below, the operator will not be automatically upgraded. To upgrade from the 0.5.0 or below, link:https://openshift.github.io/pipelines-docs/docs/0.10.5/proc_uninstalling-pipelines-operator.html[uninstall the operator] and then install it again.
 ====
 
 . Click *Subscribe*. You will see the operator listed on the *Installed Operators* page.
