--- a/modules/ROOT/pages/assembly_working-with-pipelines-using-the-developer-perspective.adoc
+++ b/modules/ROOT/pages/assembly_working-with-pipelines-using-the-developer-perspective.adoc
@@ -1,13 +1,22 @@
 :parent-context-of-working-with-pipelines-using-developer-perspective: {context}
 
 [id='working-with-pipelines-using-developer-perspective_{context}']
-= Using Pipelines
+= Working with Pipelines using the Developer
 
 :context: working-with-pipelines-using-developer-perspective
 
 You can use the *Developer* perspective of the OpenShift web console to create CI/CD pipelines for your software delivery process while creating an application on OpenShift Container Platform.
 
+After you create pipelines, you can view and visually interact with your deployed pipelines.
+
 NOTE: The .NET Core runtime is not yet supported by the pipeline templates.
+
+[Discrete]
+=== Prerequisites
+
+* You have access to an OpenShift Cluster and have logged in to the web console and are in the link:https://docs.openshift.com/container-platform/4.2/web-console/odc-about-developer-perspective.html[Developer perspective].
+* You have cluster administrator privileges to install operators and have link:https://openshift.github.io/pipelines-docs/docs/0.10.5/assembly_installing-pipelines.html[installed the OpenShift Pipelines Operator].
+* You have created a project, link:https://openshift.github.io/pipelines-docs/docs/0.10.5/assembly_using-pipelines.html[deployed an application, and created a pipeline] for the application.
 
 include::proc_creating-applications-with-cicd-pipelines.adoc[leveloffset=+1]
 
