--- a/modules/ROOT/pages/proc_checking-pipeline-and-application-status.adoc
+++ b/modules/ROOT/pages/proc_checking-pipeline-and-application-status.adoc
@@ -18,24 +18,13 @@ $ tkn pipeline logs -f
 ? Select pipelinerun : build-and-deploy-run-tsv92 started 39 seconds ago
 ----
 
-. Check the *Project Status* in the OpenShift Web Console to verify that the images are successfully built and deployed.
-+
-image::deployment_complete.png[Application deployed on OpenShift]
-
 . To rerun the last pipelinerun, using the same pipeline resources and service account used in the previous pipeline, use:
 +
 ----
 tkn pipeline start build-and-deploy --last
 ----
+. To verify the application deployment in  the OpenShift web console, switch to the *Developer* perspective.
 
-////
-
-
-
-[discrete]
-== Additional resources
-
-* A bulleted list of links to other material closely related to the contents of the procedure module.
-* For more details on writing procedure modules, see the link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-* Use a consistent system for file names, IDs, and titles. For tips, see _Anchor Names and File Names_ in link:https://github.com/redhat-documentation/modular-docs#modular-documentation-reference-guide[Modular Documentation Reference Guide].
-////
+. In the *Topology* view, select the *pipelines-tutorial* project from the *Project* drop-down menu to see the successfully built and deployed applications.
++
+image::deployment_complete.png[Application deployed on OpenShift]
