update nav file

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -9,8 +9,8 @@
 ** xref:proc_installing-pipelines-operator-in-web-console.adoc[2.1 Installing the Pipelines Operator in the Web Console]
 ** xref:proc_installing-pipelines-operator-using-the-cli.adoc[2.2 Installing the Pipelines Operator using the CLI]
 ** xref:proc_uninstalling-pipelines-operator.adoc[2.3 Uninstalling the Pipelines Operator]
-* xref:assembly_using-pipelines.adoc[3. Using Pipelines]
-** xref:proc_deploying-an-application-to-openshift.adoc[3.1 Deploying an application to OpenShift]
+* xref:assembly_creating-applications-with-cicd-pipelines.adoc[3. Creating applications with CI/CD Pipelines]
+** xref:proc_creating-project-and-checking-pipeline-service-account.adoc[3.1 Creating a project and checking your Pipeline service account]
 ** xref:proc_defining-and-creating-pipeline-tasks.adoc[3.2 Defining and creating pipeline tasks]
 ** xref:proc_defining-and-creating-pipelineresources.adoc[3.3 Defining and creating pipeline resources]
 ** xref:proc_assembling-a-pipeline.adoc[3.4 Assembling a pipeline]
