--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -20,16 +20,16 @@
 ** xref:proc_creating-applications-with-cicd-pipelines.adoc[4.1 Creating-applications with CI/CD pipelines]
 ** xref:proc_interacting-with-pipelines-using-the-developer-perspective.adoc[4.2 Interacting with pipelines using the Developer perspective]
 * xref:assembly_cli-reference.adoc[5. CLI Reference]
-** xref:proc_installing-cli.adoc[5.1 Installing CLI]
-** xref:op-tkn-cli-reference.adoc[5.2 Basic Commands]
-*** xref:op-tkn-cli-utility-commands.adoc[5.2.1 Utility Commands]
-*** xref:op-tkn-cli-pipeline-management.adoc[5.2.2 Pipeline Management Commands]
-*** xref:op-tkn-cli-pipeline-run.adoc[5.2.3 Pipeline Run Commands]
-*** xref:op-tkn-cli-task-management.adoc[5.2.4 Task Management Commands]
-*** xref:op-tkn-cli-task-run.adoc[5.2.5 Task Run Commands]
-*** xref:op-tkn-cli-condition-management.adoc[5.2.6 Condition Management Commands]
-*** xref:op-tkn-cli-pipeline-resource-management.adoc[5.2.7 Pipeline Resource Management Commands]
-*** xref:op-tkn-cli-clustertask-management.adoc[5.2.8 Clustertask Management Commands]
-*** xref:op-tkn-cli-trigger-management.adoc[[5.2.9 Trigger Management Commands]
+** xref:proc_installing-cli.adoc[5.1 Installing tkn]
+** xref:op-tkn-cli-reference.adoc[5.2 Basic tkn commands]
+*** xref:op-tkn-cli-utility-commands.adoc[5.2.1 Utility commands]
+*** xref:op-tkn-cli-pipeline-management.adoc[5.2.2 Pipeline management commands]
+*** xref:op-tkn-cli-pipeline-run.adoc[5.2.3 Pipelinerun commands]
+*** xref:op-tkn-cli-task-management.adoc[5.2.4 Task management commands]
+*** xref:op-tkn-cli-task-run.adoc[5.2.5 Taskrun commands]
+*** xref:op-tkn-cli-condition-management.adoc[5.2.6 Condition management commands]
+*** xref:op-tkn-cli-pipeline-resource-management.adoc[5.2.7 Pipeline resource management commands]
+*** xref:op-tkn-cli-clustertask-management.adoc[5.2.8 Clustertask management commands]
+*** xref:op-tkn-cli-trigger-management.adoc[[5.2.9 Trigger management commands]
 
 * xref:release_notes.adoc[Release Notes]
