--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -21,15 +21,15 @@
 ** xref:proc_interacting-with-pipelines-using-the-developer-perspective.adoc[4.2 Interacting with pipelines using the Developer perspective]
 * xref:assembly_cli-reference.adoc[5. CLI Reference]
 ** xref:proc_installing-cli.adoc[5.1 Installing tkn]
-** xref:op-tkn-cli-reference.adoc[5.2 Basic tkn commands]
-*** xref:op-tkn-cli-utility-commands.adoc[5.2.1 Utility commands]
-*** xref:op-tkn-cli-pipeline-management.adoc[5.2.2 Pipeline management commands]
-*** xref:op-tkn-cli-pipeline-run.adoc[5.2.3 Pipelinerun commands]
-*** xref:op-tkn-cli-task-management.adoc[5.2.4 Task management commands]
-*** xref:op-tkn-cli-task-run.adoc[5.2.5 Taskrun commands]
-*** xref:op-tkn-cli-condition-management.adoc[5.2.6 Condition management commands]
-*** xref:op-tkn-cli-pipeline-resource-management.adoc[5.2.7 Pipeline resource management commands]
-*** xref:op-tkn-cli-clustertask-management.adoc[5.2.8 Clustertask management commands]
-*** xref:op-tkn-cli-trigger-management.adoc[[5.2.9 Trigger management commands]
+** xref:op-tkn-reference.adoc[5.2 Basic tkn commands]
+*** xref:op-tkn-utility-commands.adoc[5.2.1 Utility commands]
+*** xref:op-tkn-pipeline-management.adoc[5.2.2 Pipeline management commands]
+*** xref:op-tkn-pipeline-run.adoc[5.2.3 Pipelinerun commands]
+*** xref:op-tkn-task-management.adoc[5.2.4 Task management commands]
+*** xref:op-tkn-task-run.adoc[5.2.5 Taskrun commands]
+*** xref:op-tkn-condition-management.adoc[5.2.6 Condition management commands]
+*** xref:op-tkn-pipeline-resource-management.adoc[5.2.7 Pipeline resource management commands]
+*** xref:op-tkn-clustertask-management.adoc[5.2.8 Clustertask management commands]
+*** xref:op-tkn-trigger-management.adoc[5.2.9 Trigger management commands]
 
 * xref:release_notes.adoc[Release Notes]
