--- a/modules/ROOT/pages/op-tkn-task-run.adoc
+++ b/modules/ROOT/pages/op-tkn-task-run.adoc
@@ -1,8 +1,8 @@
 // Module included in the following assemblies:
 //
-// *  pipelines/op-tkn-cli-reference.adoc
+// *  pipelines/op-tkn-reference.adoc
 
-[id="cli-task-run-commands_{context}"]
+[id="tkn-task-run-commands_{context}"]
 = Taskrun commands
 
 == tkn taskrun
