Id/Context names aligned with File names

--- a/modules/ROOT/pages/op-tkn-pipeline-run.adoc
+++ b/modules/ROOT/pages/op-tkn-pipeline-run.adoc
@@ -2,7 +2,7 @@
 //
 // * pipelines/op-tkn-references.adoc
 
-[id="tkn-pipeline-run-commands_{context}"]
+[id="op-tkn-pipeline-run_{context}"]
 = Pipelinerun commands
 
 
